# models/user_model.go
@@ -10,7 +10,3 @@ type User struct {
 	CreatedAt time.Time `gorm:"autoCreateTime"`
 	UpdatedAt time.Time `gorm:"autoUpdateTime"`
 }
-
-type CreateUserModel struct {
-	UID string `json:"uid"`
-}
